[5.0.0] - Update user profile

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -155,6 +155,10 @@ select.form-control:focus {
   opacity: 0.7;
   filter: alpha(opacity=70);
 }
+.ass1-login__form input[type="file"] {
+    visibility: hidden;
+    position: fixed;
+}
 .ass1-btn {
   height: 38px;
   padding-left: 12px;
@@ -2486,6 +2490,10 @@ select.form-control:focus {
   display: block;
   margin: 0 auto;
   margin-bottom: 20px;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  overflow: hidden;
+  cursor: pointer;
 }
 .ass1-login__form .avatar:before {
   content: '';
